templates/ipoid_template.yaml
---
# Source: ipoid/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: ipoid-release-name
  labels:
    app: ipoid
    chart: ipoid-0.2.5
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: ipoid
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:      
      - port: 6927
        protocol: TCP
---
# Source: ipoid/templates/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: ipoid-release-name
  labels:
    app: ipoid
    chart: ipoid-0.2.5
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    
    app: ipoid
    routed_via: release-name
  ports:
    - name: http
      targetPort: 6927
      port: 6927
---
# Source: ipoid/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: ipoid-release-name
  labels:
    app: ipoid
    chart: ipoid-0.2.5
    release: release-name
    heritage: Helm
spec:
  selector:    
    matchLabels:
      app: ipoid
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:        
        app: ipoid
        release: release-name
        routed_via: release-name
      annotations:        
        checksum/secrets: d8eac2d959592f3a74ae59f47e0f3a8b5c09e40f168cbcf6b723193aa7b7403e
    spec:
      containers:        
        # The main application container
        - name: ipoid-release-name
          image: "docker-registry.wikimedia.org/repos/mediawiki/services/ipoid:latest"
          imagePullPolicy: IfNotPresent  
          ports:
            - containerPort: 6927
          livenessProbe:
            tcpSocket:
              port: 6927
          readinessProbe:
            httpGet:
              path: /_info/
              port: 6927
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 1
              memory: 400Mi        
      volumes:
---
# Source: ipoid/templates/ingress.yaml
---
---
# Source: ipoid/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'ipoid-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'ipoid-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(IPOID_RELEASE_NAME_SERVICE_HOST)', 'http://ipoid-release-name:6927']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
